--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,9 +12,14 @@
  *
  */
 
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
+
+/*
 @import "bootswatch/startbootstrap-sb-admin-2/variables";
 @import "bootstrap";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import "bootswatch/startbootstrap-sb-admin-2/bootswatch";
 @import "base";
+*/
