--- a/app/views/continents/index.html.haml
+++ b/app/views/continents/index.html.haml
@@ -1,12 +1,11 @@
 %h1 Listing continents
 
-%table
+
+%table{class: "table table-striped table-hover"}
   %thead
     %tr
       %th Name
-      %th
-      %th
-      %th
+
 
   %tbody
     - @continents.each do |continent|
@@ -18,4 +17,4 @@
 
 %br
 
-= link_to 'New Continent', new_continent_path
+= link_to 'New Continent', new_continent_path, :class => "btn"
