--- a/app/views/regions/_form.html.haml
+++ b/app/views/regions/_form.html.haml
@@ -12,6 +12,6 @@
     = f.text_field :name
   .field
     = f.label :continent
-    = f.text_field :continent
+    = f.text_field :continent_id
   .actions
     = f.submit 'Save'
