--- a/app/views/continents/_form.html.haml
+++ b/app/views/continents/_form.html.haml
@@ -1,13 +1,10 @@
-= form_for @continent do |f|
-  - if @continent.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@continent.errors.count, "error")} prohibited this continent from being saved:"
-      %ul
-        - @continent.errors.full_messages.each do |msg|
-          %li= msg
+.nested-fields
+  .continents
+    .form-inline
+      = simple_form_for @continent do |c|
+        = c.input :name
+        = simple_fields_for :region do |region|
+          = render 'region_fields', :f => region
+        .actions
+          = c.button :submit
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
