--- a/app/views/continents/index.html.haml
+++ b/app/views/continents/index.html.haml
@@ -1,13 +1,15 @@
-%h1 Listing Continents
-.div
+.mymessage
+  %h1 Listing Continents
   .div
-    - @continents.each do |f|
-      #div
-        = f.name.capitalize
-        = link_to 'Show', f
-        = link_to 'Edit', edit_continent_path(f)
-        = link_to 'Destroy', f, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Continent', new_continent_path, :class => "btn"
+    There are #{@continents.count} continents.
+    .div
+      - @continents.each do |f|
+        #div
+          = f.name.capitalize
+          = link_to 'Show', f
+          = link_to 'Edit', edit_continent_path(f)
+          = link_to 'Destroy', f, :method => :delete, :data => { :confirm => 'Are you sure?' }
+  
+  %br
+  
+  = link_to 'New Continent', new_continent_path, :class => "btn"
