--- a/app/views/continents/_form.html.haml
+++ b/app/views/continents/_form.html.haml
@@ -1,19 +1,12 @@
-.form-holder
-  .errors
-    = form_for @continent do |f|
-      - if @continent.errors.any?
-        #error_explanation
-          %h2= "#{pluralize(@continent.errors.count, "error")} prohibited this continent from being saved:"
-          %ul
-            - @continent.errors.full_messages.each do |msg|
-              %li= msg
-  .nested-fields
-    .continents
-      = simple_form_for @continent do |f|
-        = f.input :name
-        .adding-regions
-          = f.simple_fields_for :regions do |r|
-            = render 'region_fields', :f => r
-        .actions
-          = f.button :submit
-
+= simple_form_for @continent do |f|
+  .form-inline
+    .regions
+      = f.simple_fields_for :regions do |r|
+        = (render 'region_fields', :f => r).html_safe
+    .links
+      = link_to_add_association('Add Region', f, :regions, :class => "btn btn-default").html_safe
+    = f.button :submit, :class => "btn btn-primary"
+  
+  
+  
+  
