--- a/app/views/continents/_region_fields.html.1.haml
+++ b/app/views/continents/_region_fields.html.1.haml
@@ -1,5 +1,20 @@
 .nested-fields
-  = f.input :name
+  .regions
+    = f.input :name
+    = f.input :id
+    .remove-regions
+      = link_to_remove_association "Remove Region", f, :class => "btn btn-danger close"
+    %h3 Countries
+    .adding-countries
+      = f.simple_fields_for :countries do |c|
+        - render 'country_fields', :f => c
+      .adds-c
+        = link_to_add_association 'Add Country', f, :countries, :class => "btn btn-default"   
+  
+      
+      
+    
+
 
 
   
