--- a/app/views/continents/index.html.haml
+++ b/app/views/continents/index.html.haml
@@ -9,7 +9,11 @@
           = link_to 'Show', f
           = link_to 'Edit', edit_continent_path(f)
           = link_to 'Destroy', f, :method => :delete, :data => { :confirm => 'Are you sure?' }
-  
-  %br
-  
-  = link_to 'New Continent', new_continent_path, :class => "btn"
+.p Hi!
+
+%button.alert 
+  Hide
+
+%br
+
+= link_to 'New Continent', new_continent_path, :class => "btn"
