--- a/app/views/layouts/application.html.1.haml
+++ b/app/views/layouts/application.html.1.haml
@@ -2,9 +2,8 @@
 %html
   %head
     %Workspace
-      = stylesheet_link_tag 'application', media: 'all' 
+      = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true 
       = csrf_meta_tags
-
       
       <!-- Latest compiled and minified CSS -->
       %link{rel: "stylesheet", href: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", integrity: "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin: "anonymous"}
@@ -15,6 +14,6 @@
   %body
     .container
       = yield
-      = javascript_include_tag 'application' 
+      = javascript_include_tag 'application', 'data-turbolinks-track' => true 
 
     #push
