--- a/app/views/continents/edit.html.haml
+++ b/app/views/continents/edit.html.haml
@@ -1,6 +1,7 @@
 %h1 Editing Continent:  #{@continent.name.capitalize}
+
 .error-form
-  = (render 'form').html_safe
+  = render 'continents/form'
 
 %br
 
