Fix nested form: do not edit id + cosmetic

--- a/app/views/continents/_country_fields.html.haml
+++ b/app/views/continents/_country_fields.html.haml
@@ -1,5 +1,6 @@
-.nested-fields
+.nested-fields.nested-country
   .form-inline
+    Country
     = f.input :name
     = link_to_remove_association("Remove Country", f, :class => "btn btn-danger close").html_safe
 
