--- a/app/views/continents/_region_fields.html.haml
+++ b/app/views/continents/_region_fields.html.haml
@@ -1,11 +1,10 @@
-.nested-fields
+.nested-fields.well
   .form-inline
     = f.input :name
-    = f.input :id
     = link_to_remove_association "Remove Region", f, :class => "btn btn-danger close"
   .countries
     = f.simple_fields_for :countries do |c|
-      = (render 'country_fields', :f => c).html_safe
+      = render 'country_fields', :f => c
     .links
       = link_to_add_association('Add Country', f, :countries, :class => "btn btn-default").html_safe   
 
