padded countries in continents.css more

--- a/app/views/continents/_country_fields.html.haml
+++ b/app/views/continents/_country_fields.html.haml
@@ -2,6 +2,6 @@
   .form-inline
     Country
     = f.input :name
-    = link_to_remove_association("Remove Country", f, :class => "btn btn-danger close").html_safe
+    = link_to_remove_association("Remove Country", f, :class => "btn btn-danger close")
 
   
