--- a/app/views/continents/edit.html.haml
+++ b/app/views/continents/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Editing Continent:  #{@continent.name.capitalize}
+%h1 Editing Continent ... #{@continent.name.capitalize} ...
 
 .error-form
   = render 'continents/form'
