removed unnecessary parentheses from using html_safe on remove link

--- a/app/assets/stylesheets/continents.css
+++ b/app/assets/stylesheets/continents.css
@@ -6,4 +6,11 @@
   margin-top: 10px;
 }
 
+.nested-region {
+  /*background: #727570c;*/
+  padding: 0px;
+  padding-left: 5px; 
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
 /*# sourceMappingURL=continents.css.css.map */
